--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
     <section class="products">
       <h2>Featured Designs</h2>
       <div class="product-grid">
-        <!-- Display your featured CNC designs here -->
-        <!-- Each design can be a product card with an image, title, description, and price -->
+    <div class="product-card">
+  <img src="image-url.jpg" alt="CNC Design">
+  <h3>Design Title</h3>
+  <p>Description of the design goes here. This is a brief overview of the design, its features, and potential applications.</p>
+  <p class="price">$19.99</p>
+  <button>Add to Cart</button>
+</div>
+
       </div>
     </section>
 
