--- a/index.html
+++ b/index.html
@@ -23,12 +23,65 @@
       <h2>Featured Designs</h2>
       <div class="product-grid">
     <div class="product-card">
-  <img src="image-url.jpg" alt="CNC Design">
-  <h3>Design Title</h3>
-  <p>Description of the design goes here. This is a brief overview of the design, its features, and potential applications.</p>
-  <p class="price">$19.99</p>
-  <button>Add to Cart</button>
-</div>
+      <img src="design1.jpg" alt="Design 1">
+      <h3>Design 1</h3>
+      <p>Description of Design 1 goes here.</p>
+      <p class="price">$19.99</p>
+      <button>Add to Cart</button>
+    </div>
+
+    <div class="product-card">
+      <img src="design2.jpg" alt="Design 2">
+      <h3>Design 2</h3>
+      <p>Description of Design 2 goes here.</p>
+      <p class="price">$24.99</p>
+      <button>Add to Cart</button>
+    </div>
+        <div class="product-card">
+      <img src="design1.jpg" alt="Design 1">
+      <h3>Design 1</h3>
+      <p>Description of Design 1 goes here.</p>
+      <p class="price">$19.99</p>
+      <button>Add to Cart</button>
+    </div>
+
+    <div class="product-card">
+      <img src="design2.jpg" alt="Design 2">
+      <h3>Design 2</h3>
+      <p>Description of Design 2 goes here.</p>
+      <p class="price">$24.99</p>
+      <button>Add to Cart</button>
+    </div>
+        <div class="product-card">
+      <img src="design1.jpg" alt="Design 1">
+      <h3>Design 1</h3>
+      <p>Description of Design 1 goes here.</p>
+      <p class="price">$19.99</p>
+      <button>Add to Cart</button>
+    </div>
+
+    <div class="product-card">
+      <img src="design2.jpg" alt="Design 2">
+      <h3>Design 2</h3>
+      <p>Description of Design 2 goes here.</p>
+      <p class="price">$24.99</p>
+      <button>Add to Cart</button>
+    </div>
+        <div class="product-card">
+      <img src="design1.jpg" alt="Design 1">
+      <h3>Design 1</h3>
+      <p>Description of Design 1 goes here.</p>
+      <p class="price">$19.99</p>
+      <button>Add to Cart</button>
+    </div>
+
+    <div class="product-card">
+      <img src="design2.jpg" alt="Design 2">
+      <h3>Design 2</h3>
+      <p>Description of Design 2 goes here.</p>
+      <p class="price">$24.99</p>
+      <button>Add to Cart</button>
+    </div>
 
       </div>
     </section>
