--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CNC Design Store</title>
+  <title>CNC Design Store - TechCutCNC</title>
   <link rel="stylesheet" href="styles.css"> <!-- Link to your custom CSS file -->
 </head>
 <body>
   <header>
     <nav>
-      <!-- Include your website logo and navigation links here -->
+      <a href="#">TechCutCNC</a> <!-- Replace "#" with your actual website URL -->
+      <!-- Include other navigation links if needed -->
     </nav>
   </header>
 
@@ -111,7 +112,7 @@
   </main>
 
   <footer>
-    <!-- Include your website footer content here -->
+    <p>&copy; 2023 TechCutCNC. All rights reserved.</p>
   </footer>
 </body>
 </html>
